- fixed some stuff for debian
- moved to a complede vanilla debian box for windoz crosscompilation (the old
and good SDL crosscompiler is not used anymore. RIP)
05/06/2005 0.0.29
- es: *** empty log message *** (lisar314)
- mailcom.lua: fixed issues with operamail and ambigious match (russell822)
- fr: *** empty log message *** (fvancaen)
- aol.lua: Made a minor tweak for aim. (russell822)
- fr: convenience zip chapter (fvancaen)
- fr: freepops is now part of debian (fvancaen)
- es: fixed rss (gareuselesinge)
- es, fr: removed statistics (gareuselesinge)
- mailcom.lua: Fixed an issue with multipage stat having issues due to ad pages (russell822)
- es, fr: added zip (gareuselesinge)
- es: Updated download-linux.shtml (lisar314)
- es, fr: fixed download linux (gareuselesinge)
- gmail.lua, squirrelmail.lua, tre.lua, yahoo.lua, hotmail.lua, aol.lua, , mailcom.lua, netscape.lua: Changed FreePOPs homepage address to http://www.freepops.org (alessiofender)
- es, fr: Changed FreePOPs homepage to http://www.freepops.org (alessiofender)
- updated manual
- added juno.lua to official plugins
- cosmetic change to the pop3server, now the timout error is handled in pretty
way
- added support for PLUGIN_REGEXES in plugin header  and regex = true in config.lua
- apdated slackaware requires
- fixed debian/rules to build the manual only when requested
- fixed config.lua (added mail.org)
29/05/2005 0.0.28
- hotmail.lua: Reacted to changes from MSFT (russell822)
- es: *** empty log message *** (lisar314)
- es: fixed rss (gareuselesinge)
- aol.lua: added aim.com support (russell822)
- mailcom.lua: added supported for iname.com (russell822)
- yahoo.lua, hotmail.lua, aol.lua, netscape.lua: description translations in italian updated (ncocchiaro)
- aol.lua: fix (gareuselesinge)
- hotmail.lua: fixed a minor login issue (russell822)
- : fixed qpr_io_slave (gareuselesinge)
- mailcom.lua: Fixed an issue with usa.com (russell822)
- yahoo.lua: updated required core version (ncocchiaro)